tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-40/test000006.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c
Line: 17
Stack: 
	#0 00000045 in remove_from_list (head=32413760, node=32400656) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:17
	#1 00000090 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:40
Info: 
	address: (Add w64 16
         (ReadLSB w64 8 a1))
	example: 16
	range: [0, 18446744073709551615]
	next: object at 32362864 of size 4
		MO9[4] allocated at main():  %retval = alloca i32
